change background color / fix scroll to top / hide scrollbar

--- a/src/components/AboutMe.module.scss
+++ b/src/components/AboutMe.module.scss
@@ -5,7 +5,7 @@
 
   .frame {
     box-sizing: border-box;
-    width: 50%;
+    // width: 50%;
     height: 100vh;
     opacity: 0;
     position: fixed;
